# healthcare-appointment-platform

./: README.md  compose.yml
docs/: api-design.md  architecture.md  database-design.md  demo-commands.md  implementation-roadmap.md  interview-notes.md  project-context.md  submission-checklist.md
web/backend/: .dockerignore  Dockerfile  README.md  pom.xml
web/backend/src/main/java/com/healthcare/appointment/: HealthcareAppointmentApplication.java
web/backend/src/main/java/com/healthcare/appointment/config/: CorrelationIdFilter.java  JpaConfig.java  JwtAuthenticationFilter.java  KafkaConfig.java  OpenApiConfig.java  SecurityConfig.java
web/backend/src/main/resources/: application.yml
web/backend/src/main/resources/db/migration/: V1__create_core_schema.sql  V2__seed_departments_doctors_slots.sql  V3__add_event_idempotency.sql  V4__add_correlation_id_to_event_logs.sql  V5__prevent_overlapping_user_appointments.sql
web/frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
web/frontend/src/: App.tsx  styles.css
web/frontend/src/api/: appointments.ts  client.ts
web/frontend/src/data/: placeholders.ts
web/frontend/src/types/: domain.ts
web/frontend/src/views/: AppointmentsView.tsx  AuthView.tsx  BookingView.tsx
worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
worker/appointment_worker/: __init__.py  config.py  consumer.py  db.py  logging.py  main.py  models.py  processor.py
worker/tests/: test_processor.py
(+55 files in other folders)
